# pvninja

./: .gitignore  CLAUDE.md  README.md  main.py  ninjaclient.py  ninjaservice.py  ninjautils.py  pyproject.toml  requirements.txt  solar_data_final.db
app/: __init__.py  elpriser.py  main.py
src/pvninja/: config.py  events.py
src/pvninja/scripts/: start_all.py  start_server.py  start_ui.py
src/server/: main.py
src/ui/: app.py
src/ui/static/: index.html
src/ui/templates/: index.html
tests/: test_server.py
