[tool.poetry]
name = "pvninja"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "pvninja", from = "src" },
  { include = "server", from = "src" },
  { include = "ui", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sse-starlette = "^2.3.4"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn:src.server.main:app --reload"


