[tool.poetry]
name = "pvninja"
version = "0.1.0"
description = "Full automation on top of SolarAssistant's MQTT, for Growatt TL-X/XH, TL3-XH"
authors = ["Jimmi Bram"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "pvninja", from = "src" }, { include = "server", from = "src" }, { include = "ui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
gunicorn = "^22.0"
websockets = "^12.0"
pydantic = "^2.7"

[tool.poetry.scripts]
start-server = "pvninja.scripts.start_server:main"
start-ui     = "pvninja.scripts.start_ui:main"
start-all    = "pvninja.scripts.start_all:main"
